Kanji box was being cut off due to width problems. Solved by removing overflox x for now.

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,7 +6,7 @@
 
 #container {
   width: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 #viewer {
